# FailChain

./: .gitignore  README.md  pyproject.toml
examples/: sample-junit.xml  test-analyzer.yml
failchain/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
failchain/analysis/: __init__.py  agent.py  batching.py  grouping.py  retry.py  screenshot_analysis.py  static_hints.py
failchain/parsers/: __init__.py  base.py  junit_xml.py  playwright_json.py  registry.py
failchain/related_files/: __init__.py  base.py  cypress_commands.py  playwright_pom.py  pytest_fixtures.py  registry.py
failchain/reporting/: __init__.py  markdown.py
failchain/screenshots/: __init__.py  base.py  cypress.py  playwright.py  registry.py
failchain/tools/: __init__.py  builtin.py  registry.py
tests/: conftest.py  test_batching.py  test_config.py  test_grouping.py  test_parsers.py  test_reporting.py  test_retry.py
